--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <span class="social-media-icons">
                 <a href="https://www.facebook.com/XMarwanAshraf/" target="_blank"><i class="fa-brands fa-facebook" style="color:#1094F4; font-size:2.5em;  border-radius: 50%; margin-bottom: 20px;"></i></a>
                 <a href="https://www.linkedin.com/in/marwan-ashraf-245049254/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #0A66C2; font-size:2.5em; margin-bottom: 20px; border-radius: 50%; height: 50px; text-align: center; padding:6px 8px"></i></a>
-                <a href="https://github.com/R2mb0o"  target="_blank"><i class="fa-brands fa-github" style="color: #FFF; font-size:2.5em; color:#ff5e00;  border-radius: 50%;  margin-bottom: 20px; text-align: center;"></i></a>
+                <a href="https://github.com/R2mbo"  target="_blank"><i class="fa-brands fa-github" style="color: #FFF; font-size:2.5em; color:#ff5e00;  border-radius: 50%;  margin-bottom: 20px; text-align: center;"></i></a>
                 <a href="https://discord.com/users/1056091036335751178" target="_blank"><i class="fa-brands fa-discord" style="color:#5460E6; font-size:2.2em;  border-radius: 50%; padding: 6px 4px; text-align: center;"></i></a>
 
             </span>
