--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <p class="out">that's all the projects i have for now. in the future i will have more than 1000 god willing :)</p>
     <div class="container">
         <div class="fst-pro">
-            <a href="https://r2mb0o.github.io/Madara-Website/" target="_blank" class="link-1"><img src="./images/Madara-Uchiha.png" alt="madara website project image"></a>
+            <a href="https://r2mbo.github.io/Madara-Website/" target="_blank" class="link-1"><img src="./images/Madara-Uchiha.png" alt="madara website project image"></a>
             <p class="fst-pro-p">uchiha madara website</p>
             <a href="https://github.com/R2mb0o/Madara-Website" target="_blank" class="link-2">github repositorie link</a>
         </div>
