--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <section class="contact" id="contact">
     <h2>Contact Me</h2>
 <div class="container">
-    <form action="" method="get">
+    <form action="https://formsubmit.co/xmarwanashraf@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Full Name" maxlength="29">
             <input type="email" name="mail" placeholder="Email Address">
             <input type="tel" name="phone" placeholder="Phone Number">
