--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <!-- Start Contact Section -->
 <section class="contact" id="contact">
     <h2>Contact Me</h2>
-<div class="container">
+<div class="container" style="text-transform: none;">
     <form action="https://formsubmit.co/xmarwanashraf@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Full Name" maxlength="29">
             <input type="email" name="mail" placeholder="Email Address">
