--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 <!-- Start Contact Section -->
 <section class="contact" id="contact">
     <h2>Contact Me</h2>
-<div class="container" style="text-transform: initial;">
+<div class="container">
     <form action="https://formsubmit.co/xmarwanashraf@gmail.com" method="POST">
             <input type="text" name="name" placeholder="Full Name" maxlength="29">
-            <input type="email" name="mail" placeholder="Email Address">
+            <input style="text-transform: none;"type="email" name="mail" placeholder="Email Address">
             <input type="tel" name="phone" placeholder="Phone Number">
-            <textarea name="letter" style="padding:20px; line-height:1.2; resize:none; width:100%; overflow:auto; height:200px" placeholder="let me know How can i serve you"></textarea>
+            <textarea style="text-transform: none;" name="letter" style="padding:20px; line-height:1.2; resize:none; width:100%; overflow:auto; height:200px" placeholder="let me know How can i serve you"></textarea>
             <input type="submit" value="Submit">
     </form>
     <img src="./images/68747470733a2f2f696d616765732e73717561726573706163652d63646e2e636f6d2f636f6e74656e742f76312f3537363966633430316236333162616231616464623261622f313534313538303631313632342d5445363451474b524a47385357414.gif" alt="programmer2.gif">
