modifing some issues

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <section class="contact" id="contact">
     <h2>Contact Me</h2>
 <div class="container">
-    <form action="https://formsubmit.co/xmarwanashraf@gmail.com" method="POST">
+    <form action="" method="POST">
             <input type="text" name="name" placeholder="Full Name" maxlength="29">
             <input style="text-transform: none;"type="email" name="mail" placeholder="Email Address">
             <input type="tel" name="phone" placeholder="Phone Number">
@@ -137,7 +137,6 @@
                 <a href="https://www.linkedin.com/in/marwan-ashraf-245049254/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #0A66C2; font-size:2.5em; margin-bottom: 20px; border-radius: 50%; height: 50px; text-align: center; padding:6px 8px"></i></a>
                 <a href="https://github.com/R2mbo"  target="_blank"><i class="fa-brands fa-github" style="color: #FFF; font-size:2.5em; color:#ff5e00;  border-radius: 50%;  margin-bottom: 20px; text-align: center;"></i></a>
                 <a href="https://discord.com/users/1056091036335751178" target="_blank"><i class="fa-brands fa-discord" style="color:#5460E6; font-size:2.2em;  border-radius: 50%; padding: 6px 4px; text-align: center;"></i></a>
-
             </span>
             <p>© Designed by <span style="font-weight:bold">Marwan Ashraf</span>. All Right Reserved.</p>
         </div>
