--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <a href="#" class="logo">marwan ashraf</a>
             <div class="burger">
-                <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                <i class="fa-solid fa-bars" style="color: #ffffff; margin:auto;"></i>
                 <ul class>
                     <li><a href="#about">about</a></li>
                     <li><a href="#skills">skills</a></li>
